@@ -1,4 +1,4 @@
 @set UPDATED 3 September 2006
 @set UPDATED-MONTH September 2006
-@set EDITION 2.2.3
-@set VERSION 2.2.3
+@set EDITION 2.2.4
+@set VERSION 2.2.4
